--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emotion/react": "^11.11.1",
-    "@mantine/core": "^7.8.0",
-    "@mantine/dates": "^7.8.0",
-    "@mantine/hooks": "^7.8.0",
-    "mantine-datatable": "^7.3.0",
+    "@mantine/core": "^6.0.22",
+    "@mantine/dates": "^6.0.22",
+    "@mantine/hooks": "^6.0.22",
     "mantine-react-table": "^1.3.4",
+    "@mantine/notifications": "^7.8.0",
+    "mantine-datatable": "^7.3.0",
     "@next/font": "13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@tabler/icons-react": "^2.44.0",
